Fixed homepage on mobile

--- a/static/assets/css/home.css
+++ b/static/assets/css/home.css
@@ -1,6 +1,6 @@
 .content p{max-width:1000px}
 .center{text-align:center}
-blockquote{font-size:1.2rem;padding-bottom:3rem;margin:0}
+blockquote{font-size:1.1rem;padding-bottom:3rem;margin:0}
 blockquote:before{content:'“';font-size:4rem;font-family:serif;float:left;padding:.8rem}
 blockquote cite:before{content:"— "}
 .btn.call{padding:1em 2em;font-size:1.2rem;background:gold;color:black;
